--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,11 @@
 <div class="jumbotron">
-	<p><a class="btn btn-lg btn-success" ng-click="getRandomLunchVenue()">Go!</a></p>
-    {{venue}}
+    <div ng-show="venue">
+        <a ng-href="{{venue.canonicalUrl}}" target="_blank">
+            <h1 ng-bind="venue.name"></h1>
+            <h2>Just <span ng-bind="venue.location.distance"></span>m from you!</h2>
+            <h4><span ng-bind="venue.location.address"></span>, <span ng-bind="venue.location.city"></span></h4>
+        </a>
+        {{tip.text}}
+    </div>
+	<button class="btn btn-7 btn-7h" ng-class="{'btn-error': loading}" ng-click="getRandomLunchVenue()">Go!</button>
 </div>
