--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,11 +1,26 @@
-<div class="jumbotron">
-    <div ng-show="venue">
-        <a ng-href="{{venue.canonicalUrl}}" target="_blank">
-            <h1 ng-bind="venue.name"></h1>
-            <h2>Just <span ng-bind="venue.location.distance"></span>m from you!</h2>
-            <h4><span ng-bind="venue.location.address"></span>, <span ng-bind="venue.location.city"></span></h4>
-        </a>
-        {{tip.text}}
-    </div>
-	<button class="btn btn-7 btn-7h" ng-class="{'btn-error': loading}" ng-click="getRandomLunchVenue()">Go!</button>
+<div class="container result" ng-hide="!venue" ng-class="{'loading': loading}">
+    <section class="venue-container">
+        <div class="venue">
+            <a class="venue-link" ng-href="{{venue.canonicalUrl}}" target="_blank">
+                <h1 ng-bind="venue.name" class="venue-title"></h1>
+                <h2 class="venue-subtitle" ng-bind="venue.categories[0].name"></h2>
+                <p class="venue-distance"><span ng-bind="venue.location.distance"></span> meters from you!</p>
+                <p ng-if="venue.location.address || venue.location.city" class="venue-address">
+                    <span ng-if="venue.location.address" ng-bind-template="{{venue.location.address}},"></span> <span ng-bind="venue.location.city"></span>
+                </p>
+            </a>
+            <blockquote ng-bind="tip.text" class="venue-tip"></blockquote>
+        </div>
+        <button class="shake-button" ng-click="getRandomLunchVenue(currentCategory)">
+            <img ng-src="images/{{currentCategory}}-title.png" class="category-title" alt="Shake for {{currentCategory}}!">
+        </button>
+    </section>
+</div>
+<div class="container main" ng-hide="venue" ng-class="{'loading': loading}">
+    <ul class="swipe-container">
+        <li ng-repeat="cat in categories" ng-class="cat+'-category'" class="category" ng-click="getRandomLunchVenue()">
+            <img ng-src="images/{{cat}}-title.png" class="category-title" alt="Shake for {{cat}}!">
+            <p class="swipe-instruction">made with&nbsp;&nbsp;♡&nbsp;&nbsp;by The Comet Cult</p>
+        </li>
+    </ul>
 </div>
