--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,10 +9,14 @@ $color-loaded: white;
 
 $color-white: white;
 $color-title: #f05a23;
-$color-subtitle: #cccccc;
+$color-subtitle: #b2b2b2;
 $color-address: #404040;
 $color-light: #f2f2f2;
+$color-footer: #ffd97e;
 $font-family-normal: Montserrat, sans-serif;
+
+$rwdBigPhone: "(min-width: 500px)";
+$rwdDesktop: "(min-width: 800px)";
 
 @mixin animation($anim) {
     -webkit-animation: $anim;
@@ -30,6 +34,8 @@ html, body, main, .container, .rn-carousel-container, .swipe-container {
     min-height: calc(100% - 3em);
     height: auto;
     padding-bottom: 3em;
+    display: table-cell;
+    vertical-align: middle;
 }
 
 body {
@@ -73,20 +79,23 @@ body {
     }
 
     .loading & {
-        @include animation(shake-bg .5s infinite);
+        @include animation(shake-bg-mobile .5s infinite);
     }
 }
 
-.swipe-instruction {
+footer.tcc {
     font-size: 1.6em;
-    color: white;
-    opacity: 0.5;
+    color: $color-footer;
     text-align: center;
     position: absolute;
     bottom: 3em;
     left: 0;
     width: 100%;
     text-align: center;
+}
+
+.swipe-instruction {
+    display: none;
 }
 
 
@@ -112,12 +121,10 @@ body {
 
 .result {
     background-color: $color-loaded;
-    display: block;
+    display: table;
     padding: 0;
 }
-.venue-container {
-    display: block;
-}
+
 .venue {
     @include box-sizing(border-box);
     padding: 3em 3em 0 3em;
@@ -214,7 +221,7 @@ body {
     }
 
     .loading & {
-        @include animation(shake-bg .5s infinite);
+        @include animation(shake-bg-mobile .5s infinite);
 
         img {
             @include animation(shake .5s infinite);
@@ -229,25 +236,90 @@ body {
 .container.main {
     &.ng-hide-add {
         @include transition(.6s ease-in all);
-        @include transform(translateY(-100%));
+        @include transform(translate3d(0, -100%, 0));
         display: block !important;
     }
 
     &.ng-hide-add.ng-hide-add-active {
-        @include transform(translateY(0%));
+        @include transform(translate3d(0, 0%, 0));
     }
 }
 
 .container.result {
     &.ng-hide-remove {
         @include transition(.6s ease-out all);
-        @include transform(translateY(-100%));
+        @include transform(translate3d(0, -100%, 0));
         display: block !important;
     }
 
     &.ng-hide-remove.ng-hide-remove-active {
-        @include transform(translateY(0%));
+        @include transform(translate3d(0, 0%, 0));
     }
+}
+
+.container {
+    @include backface-visibility(hidden);
+    @include perspective(1000);
+}
+
+
+
+@media screen and #{$rwdBigPhone} {
+    .meal-category {
+        background-size: 100px;
+
+        .loading & {
+            @include animation(shake-bg .5s infinite);
+        }
+    }
+
+    .category {
+        .category-title {
+            margin-top: 20em;
+            margin-top: 20vh;
+            max-width: 285px;
+        }
+    }
+
+    .swipe-instruction {
+        display: block;
+        color: white;
+        text-transform: uppercase;
+        font-family: $font-family-normal;
+        font-weight: bold;
+        font-size: 1.1em;
+        line-height: 1.6;
+        text-align: center;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        bottom: 20em;
+        bottom: 20vh;
+        letter-spacing: .1em;
+    }
+
+    .result {
+        margin: 0 auto;
+        max-width: 600px;
+    }
+
+    .shake-button {
+        margin: 2.5em 1.5em;
+    }
+
+    .venue-tip {
+        font-size: 1.5em;
+        line-height: 1.6;
+    }
+
+    footer.tcc {
+        font-size: 1.4em;
+        bottom: 2em;
+    }
+}
+
+@media screen and #{$rwdDesktop} {
+
 }
 
 
@@ -271,20 +343,38 @@ body {
     20%, 40%, 60%, 80% {transform: translateX(10px);}
 }
 
-@-webkit-keyframes shake-bg {
+@-webkit-keyframes shake-bg-mobile {
     0%, 100% {background-position: 50% 50%; }
     10%, 30%, 50%, 70%, 90% {background-position: 40% 50%; }
     20%, 40%, 60%, 80% {background-position: 60% 50%; }
+}
+
+@-moz-keyframes shake-bg-mobile {
+    0%, 100% {background-position: 50% 50%; }
+    10%, 30%, 50%, 70%, 90% {background-position: 40% 50%; }
+    20%, 40%, 60%, 80% {background-position: 60% 50%; }
+}
+
+@keyframes shake-bg-mobile {
+    0%, 100% {background-position: 50% 50%; }
+    10%, 30%, 50%, 70%, 90% {background-position: 40% 50%; }
+    20%, 40%, 60%, 80% {background-position: 60% 50%; }
+}
+
+@-webkit-keyframes shake-bg {
+    0%, 100% {background-position: 50% 50%; }
+    10%, 30%, 50%, 70%, 90% {background-position: 49% 50%; }
+    20%, 40%, 60%, 80% {background-position: 51% 50%; }
 }
 
 @-moz-keyframes shake-bg {
     0%, 100% {background-position: 50% 50%; }
-    10%, 30%, 50%, 70%, 90% {background-position: 40% 50%; }
-    20%, 40%, 60%, 80% {background-position: 60% 50%; }
+    10%, 30%, 50%, 70%, 90% {background-position: 49% 50%; }
+    20%, 40%, 60%, 80% {background-position: 51% 50%; }
 }
 
 @keyframes shake-bg {
     0%, 100% {background-position: 50% 50%; }
-    10%, 30%, 50%, 70%, 90% {background-position: 40% 50%; }
-    20%, 40%, 60%, 80% {background-position: 60% 50%; }
+    10%, 30%, 50%, 70%, 90% {background-position: 49% 50%; }
+    20%, 40%, 60%, 80% {background-position: 51% 50%; }
 }
