--- a/app/views/main.html
+++ b/app/views/main.html
@@ -12,15 +12,16 @@
             <blockquote ng-bind="tip.text" class="venue-tip"></blockquote>
         </div>
         <button class="shake-button" ng-click="getRandomLunchVenue(currentCategory)">
-            <img ng-src="images/{{currentCategory}}-title.png" class="category-title" alt="Shake for {{currentCategory}}!">
+            <img ng-if="currentCategory" ng-src="images/{{currentCategory}}-title.png" class="category-title" alt="Shake for {{currentCategory}}!">
         </button>
     </section>
 </div>
 <div class="container main" ng-hide="venue" ng-class="{'loading': loading}">
     <ul class="swipe-container">
         <li ng-repeat="cat in categories" ng-class="cat+'-category'" class="category" ng-click="getRandomLunchVenue()">
-            <img ng-src="images/{{cat}}-title.png" class="category-title" alt="Shake for {{cat}}!">
-            <p class="swipe-instruction">made with&nbsp;&nbsp;♡&nbsp;&nbsp;by The Comet Cult</p>
+            <img ng-if="cat" ng-src="images/{{cat}}-title.png" class="category-title" alt="Shake for {{cat}}!">
+            <p class="swipe-instruction">Click on the icon <br> to find a place to eat</p>
+            <footer class="tcc">made with&nbsp;&nbsp;♡&nbsp;&nbsp;by The Comet Cult</footer>
         </li>
     </ul>
 </div>
