LB-7 Added Foursquare link in the footer

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -98,6 +98,11 @@ footer.tcc {
     span {
         display: none;
     }
+
+    a {
+        color: $color-footer;
+        text-decoration: none;
+    }
 }
 
 header.top {
