--- a/app/views/main.html
+++ b/app/views/main.html
@@ -25,7 +25,11 @@
             <header class="top">Mealshaker</header>
             <p class="swipe-instruction desktop-hide">Shake your phone to <br> find a place to eat.</p>
             <p class="swipe-instruction mobile-hide">Click the icon to find a <br> place to eat.</p>
-            <footer class="tcc"><span>Visit this site on your phone and shake it like a mad man<br></span>made with&nbsp;&nbsp;♡&nbsp;&nbsp;by The Comet Cult</footer>
+            <footer class="tcc">
+                <span>Visit this site on your phone and shake it like a mad man<br></span>
+                made with&nbsp;&nbsp;♡&nbsp;&nbsp;by The Comet Cult<br>
+                Powered by <a target="_blank" href="https://foursquare.com">Foursquare</a>
+                </footer>
         </li>
     </ul>
 </div>
