--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,6 +16,10 @@
                 <span class="desktop-hide">Shake for meal</span>
                 <span class="mobile-hide">Click for meal</span>
             </button>
+            <div class="share-buttons">
+                <button facebook-share description="venue.name" class="facebook">f</button>
+                <button class="twitter" twitter-share description="venue.name">t</button>
+            </div>
         </div>
     </section>
 </div>
@@ -26,10 +30,15 @@
             <p class="swipe-instruction desktop-hide">Shake your phone to <br> find a place to eat.</p>
             <p class="swipe-instruction mobile-hide">Click the icon to find a <br> place to eat.</p>
             <footer class="tcc">
+                <div class="share-buttons">
+                    <button facebook-share class="facebook">f</button>
+                    <button class="twitter" twitter-share>t</button>
+                </div>
+
                 <span>Visit this site on your phone and shake it like a mad man<br></span>
                 made with&nbsp;&nbsp;♡&nbsp;&nbsp;by The Comet Cult<br>
                 Powered by <a target="_blank" href="https://foursquare.com">Foursquare</a>
-                </footer>
+            </footer>
         </li>
     </ul>
 </div>
