--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,14 +2,15 @@
     <section class="venue-container">
         <footer class="mealshake-logo"><img src="/images/meal-footer.png" alt=""></footer>
         <div class="venue">
-            <a class="venue-link" ng-href="{{venue.canonicalUrl}}" target="_blank">
+            <a class="venue-link" ng-href="{{venue.canonicalUrl}}" target="_blank" ng-if="!loading">
                 <h1 ng-bind="venue.name" class="venue-title"></h1>
                 <p class="venue-distance"><span ng-bind="venue.location.distance"></span> meters from you!</p>
                 <p ng-if="venue.location.address || venue.location.city" class="venue-address">
                     <span ng-if="venue.location.address" ng-bind-template="{{venue.location.address}},"></span> <span ng-bind="venue.location.city"></span>
                 </p>
             </a>
-            <blockquote ng-bind="tip.text" class="venue-tip"></blockquote>
+            <blockquote ng-bind="tip.text" class="venue-tip" ng-if="!loading"></blockquote>
+            <h1 class="funny-text" ng-repeat="text in texts" ng-if="$index === loadingTextIndex" ng-bind="text"></h1>
         </div>
         <div class="button-container">
             <button class="shake-button" ng-click="getRandomLunchVenue(currentCategory)">
@@ -27,8 +28,9 @@
     <ul class="swipe-container">
         <li ng-repeat="cat in categories" ng-class="cat+'-category'" class="category" ng-click="getRandomLunchVenue()">
             <header class="top">Mealshaker</header>
-            <p class="swipe-instruction desktop-hide">Shake your phone to <br> find a place to eat.</p>
-            <p class="swipe-instruction mobile-hide">Click the icon to find a <br> place to eat.</p>
+            <p class="swipe-instruction desktop-hide" ng-if="!loading">Shake your phone to <br> find a place to eat.</p>
+            <p class="swipe-instruction mobile-hide" ng-if="!loading">Click the icon to find a <br> place to eat.</p>
+            <p class="swipe-instruction funny-text" ng-repeat="text in texts" ng-if="$index === loadingTextIndex" ng-bind="text"></p>
             <footer class="tcc">
                 <div class="share-buttons">
                     <button facebook-share class="facebook">f</button>
