--- a/app/views/main.html
+++ b/app/views/main.html
@@ -26,8 +26,9 @@
 </div>
 <div class="container main" ng-hide="venue" ng-class="{'loading': loading}">
     <ul class="swipe-container">
-        <li ng-repeat="cat in categories" ng-class="cat+'-category'" class="category" ng-click="getRandomLunchVenue()">
+        <li ng-repeat="cat in categories" ng-class="cat+'-category'" class="category">
             <header class="top">Mealshaker</header>
+            <button class="main-button" ng-click="getRandomLunchVenue()"></button>
             <p class="swipe-instruction desktop-hide" ng-if="!loading">Shake your phone to <br> find a place to eat.</p>
             <p class="swipe-instruction mobile-hide" ng-if="!loading">Click the icon to find a <br> place to eat.</p>
             <p class="swipe-instruction funny-text" ng-repeat="text in texts" ng-if="$index === loadingTextIndex" ng-bind="text"></p>
