LB-23 Fixed Icon position

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -254,8 +254,8 @@ header.top {
         background-size: 12px;
         width: 12px;
         height: 12px;
-        margin-left: 10px;
-        top: 6px;
+        margin-left: 5px;
+        bottom: .75em;
     }
 }
 
