LB-24 Added The Comet Cult link

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -39,7 +39,7 @@
                 </div>
 
                 <span>Visit this site on your phone and shake it like a mad man<br></span>
-                made with&nbsp;&nbsp;♡&nbsp;&nbsp;by The Comet Cult<br>
+                made with&nbsp;&nbsp;♡&nbsp;&nbsp;by <a href="http://thecometcult.com/" target="_blank">The Comet Cult</a><br>
                 Powered by <a target="_blank" href="https://foursquare.com">Foursquare</a>
             </footer>
         </li>
