--- a/app/views/main.html
+++ b/app/views/main.html
@@ -30,7 +30,7 @@
         <li ng-repeat="cat in categories" ng-class="cat+'-category'" class="category">
             <header class="top">Mealshaker</header>
             <button class="main-button" ng-click="getRandomLunchVenue()"></button>
-            <p class="swipe-instruction desktop-hide" ng-if="!loading">Shake your phone to <br> find a place to eat.</p>
+            <p class="swipe-instruction desktop-hide" ng-if="!loading && !errorMessage">Shake your phone to <br> find a place to eat.</p>
             <p class="swipe-instruction mobile-hide" ng-if="!loading && !errorMessage">Click the icon to find a <br> place to eat.</p>
             <p class="swipe-instruction funny-text" ng-repeat="text in texts" ng-if="$index === loadingTextIndex" ng-bind="text"></p>
             <p class="swipe-instruction funny-text error" ng-if="!loading && errorMessage" ng-bind="errorMessage"></p>
